[gd_scene load_steps=19 format=3 uid="uid://dveirswtux86l"]

[ext_resource type="Script" uid="uid://yxl02041i4vs" path="res://Scripts/Player.cs" id="1_bhhdu"]
[ext_resource type="Script" uid="uid://dnckuybyxwpyl" path="res://Scripts/Head.cs" id="2_o3h8g"]
[ext_resource type="Shader" uid="uid://msnke2wunvcm" path="res://psx_camera/psx_camera_shader.gdshader" id="2_vuwrv"]
[ext_resource type="Script" uid="uid://40aohvg5a747" path="res://Scripts/weaponManager.gd" id="3_nc0eh"]
[ext_resource type="Resource" uid="uid://cyfhdoge2ai3v" path="res://Resources/Guns/pistol.tres" id="4_dms61"]
[ext_resource type="Script" uid="uid://curonio8etgkb" path="res://Scripts/weapon.gd" id="4_x833e"]
[ext_resource type="AudioStream" uid="uid://bwy5uhqer6bo" path="res://Sounds/166508__yoyodaman234__concrete-footstep-2.wav" id="6_52ee3"]
[ext_resource type="Script" uid="uid://cad3p4ikeidpu" path="res://Scripts/Damageable.cs" id="8_megsn"]
[ext_resource type="Script" uid="uid://cjhdyjimy8q0q" path="res://Scripts/StateMachine.cs" id="9_miouo"]
[ext_resource type="AudioStream" uid="uid://dqb2ct05r42j" path="res://Sfx/bhop_sound.ogg" id="9_nm3ss"]
[ext_resource type="Script" uid="uid://bfe46220a1gds" path="res://Scripts/WalkState.cs" id="10_o3h8g"]
[ext_resource type="Script" uid="uid://doecb4bcd70m0" path="res://Scripts/JumpingState.cs" id="11_1e7my"]
[ext_resource type="Script" uid="uid://drv313hgsu5b" path="res://Scripts/InAirState.cs" id="12_arntx"]
[ext_resource type="Script" uid="uid://clit33apas14h" path="res://Scripts/IdleState.cs" id="13_lslt6"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_j53ao"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2rap5"]
render_priority = 0
shader = ExtResource("2_vuwrv")
shader_parameter/enable_fog = true
shader_parameter/fog_color = Color(0.729412, 0.729412, 0.729412, 1)
shader_parameter/noise_color = Color(0, 0, 0, 1)
shader_parameter/fog_distance = 50.0
shader_parameter/fog_fade_range = 50.0
shader_parameter/enable_noise = true
shader_parameter/noise_time_fac = 4.0
shader_parameter/enable_color_limitation = true
shader_parameter/color_levels = 32
shader_parameter/enable_dithering = true
shader_parameter/dither_strength = 0.3

[sub_resource type="QuadMesh" id="QuadMesh_4eeyv"]
material = SubResource("ShaderMaterial_2rap5")
flip_faces = true
size = Vector2(2, 2)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_gjl25"]

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("Head", "Camera", "Damageable", "BhopPlayer", "FootstepPlayer")]
script = ExtResource("1_bhhdu")
Head = NodePath("Head")
Camera = NodePath("Head/Camera3D")
Damageable = NodePath("Damageable")
BhopPlayer = NodePath("BhopPlayer3D")
FootstepPlayer = NodePath("FootStepPlayer3D")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_j53ao")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
script = ExtResource("2_o3h8g")

[node name="Camera3D" type="Camera3D" parent="Head"]

[node name="PSXMesh" type="MeshInstance3D" parent="Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0763102, 0, -0.55748)
visible = false
mesh = SubResource("QuadMesh_4eeyv")

[node name="RayCast3D" type="RayCast3D" parent="Head/Camera3D"]
target_position = Vector3(0, 0, -100)
collision_mask = 2

[node name="WeaponManager" type="Node3D" parent="Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.32829, -0.922464)
script = ExtResource("3_nc0eh")
current_weapon = ExtResource("4_dms61")

[node name="Weapon" type="Node3D" parent="Head/Camera3D/WeaponManager"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0175576, -0.0363276, 0.0199699)
script = ExtResource("4_x833e")

[node name="ShotTimer" type="Timer" parent="Head/Camera3D/WeaponManager/Weapon"]

[node name="ReloadTimer" type="Timer" parent="Head/Camera3D/WeaponManager/Weapon"]

[node name="RayCast3D" type="RayCast3D" parent="Head/Camera3D/WeaponManager/Weapon"]
target_position = Vector3(0, 0, -100)
collision_mask = 2
debug_shape_custom_color = Color(0.73468, 0.73468, 0.73468, 1)
debug_shape_thickness = 5

[node name="MeshInstance3D" type="MeshInstance3D" parent="Head/Camera3D/WeaponManager/Weapon"]

[node name="ShootPlayer3D" type="AudioStreamPlayer3D" parent="Head/Camera3D/WeaponManager/Weapon"]

[node name="FootStepPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("6_52ee3")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_gjl25")

[node name="BhopPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("9_nm3ss")

[node name="Damageable" type="Node" parent="."]
script = ExtResource("8_megsn")
CurrentHealth = 100

[node name="FSM" type="Node" parent="."]
script = ExtResource("9_miouo")
initialState = NodePath("Idle")

[node name="Walk" type="Node" parent="FSM"]
script = ExtResource("10_o3h8g")

[node name="Jumping" type="Node" parent="FSM"]
script = ExtResource("11_1e7my")

[node name="InAir" type="Node" parent="FSM"]
script = ExtResource("12_arntx")

[node name="Idle" type="Node" parent="FSM"]
script = ExtResource("13_lslt6")
